--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
         <script>
           if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('service-worker.js')
             .then(function(registration) {
               console.log('Service Worker registered with scope:', registration.scope);
             }).catch(function(error) {
