--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
         <link href="vendor/simple_datatables_7.1.2/css/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="/manifest.json" rel="manifest" />
+        <link href="manifest.json" rel="manifest" />
         <script src="vendor/fontawesome_6.3.0/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
@@ -183,7 +183,7 @@
         </div>
         <script>
           if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js')
+            navigator.serviceWorker.register('/mangapul/service-worker.js',{scope: '/mangapul'})
             .then(function(registration) {
               console.log('Service Worker registered with scope:', registration.scope);
             }).catch(function(error) {
