--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
         <link href="vendor/simple_datatables_7.1.2/css/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="/mangapul/manifest.json" rel="manifest" />
+        <link rel="manifest" href="/mangapul/manifest.json" />
+        <meta name="theme-color" content="#000000">
         <script src="vendor/fontawesome_6.3.0/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
